# functional_verification

./: .gitignore
lab1/: danilov_v1.py  in.json  out.c
lab2/: CMakeLists.txt  CMakelists.txt  Makefile  double_multiplier.cpp  double_multiplier.v  double_multiplier_commented_coverage.v  test_data.txt  testing.v
lab4/: delenie.py
sem1/lab1/: failed.json  out.c  out2.c  test.json
sem1/lab2/: double_multiplier_commented_coverage.v  testing.v
sem1/lab2/coverage_reports/: double_multiplier.v  testing.v
sem2/lab3/: a-cache_model.gcda  a-cache_model.gcno  cache_model.cpp  cache_model.cpp.gcov  cache_model.docx
sem2/lab4/: delenie.py  delenir_nb.ipynb
